# Finetuning-MusicGen-Underrepresented-Genres

./: .gitignore  MusicGen_finetune.ipynb  README.md  audio_analysis.py  audio_analysis_report.ipynb  chunkmusic.py  musicgen_inference.ipynb  preprocess_data.py  pyproject.toml  requirements.txt
results/fusion/Anoushka Shankar/Chapter III - We Return to Light/: Amrita - Anoushka Shankar.json  Dancing on Scorched Earth - Anoushka Shankar.json  Daybreak - Anoushka Shankar.json  Hiraeth - Anoushka Shankar.json  We Burn so Brightly - Anoushka Shankar.json  We Return to Love - Anoushka Shankar.json
results/fusion/Anoushka Shankar/Traces of You/: Anoushka Shankar - Chasing Shadows.json  Anoushka Shankar - Fathers.json  Anoushka Shankar - Flight.json  Anoushka Shankar - In Jyoti's Name.json  Anoushka Shankar - Indian Summer.json  Anoushka Shankar - Lasya.json  Anoushka Shankar - Maya.json  Anoushka Shankar - Metamorphosis.json  Anoushka Shankar - River Pulse.json  Anoushka Shankar, Norah Jones - The Sun Won't Set (feat. Norah Jones).json  Anoushka Shankar, Norah Jones - Traces Of You.json  Anoushka Shankar, Norah Jones - Unsaid (feat. Norah Jones).json
results/fusion/MusicGen/musicgen-vanilla/: tmp1dd77uqg.json  tmp1zmx_io9.json  tmp35qfeak7.json  tmp5atl952m.json  tmp87555m04.json  (+5 more)
results/fusion/Raji An Ancient Epic/: 01. The End.json  02. Lament.json  03. All Gods With Me.json  04. Enter Rajasthan.json  05. Rising.json  06. The Ruins.json  07. The Deserts of Thar.json  08. Hiranyanagari.json  09. The Chieftain.json  10. Rangda.json  11. Mandala.json
utils/: labels.py
(+30 files in other folders)
