[project]
name = "final-project-part-2-audio-acousticbassguitar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "demucs>=4.0.1",
    "msclap>=1.3.3",
    "musicgen-dreamboothing",
    "python-dotenv>=1.0.1",
    "transformers>=4.50.0",
    "wordcloud>=1.9.4",
]

[tool.uv.sources]
musicgen-dreamboothing = { git = "https://github.com/ylacombe/musicgen-dreamboothing" }

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
